add elements in produit.html

--- a/produit.html
+++ b/produit.html
@@ -75,7 +75,7 @@
 
           <div>
             <!-- titre -->
-            <h3 id="h3-article">produit</h3>
+            <h3 id="h3-article"></h3>
             <!-- end titre -->
 
             <!-- menu déroulant -->
@@ -91,10 +91,10 @@
             <!-- end menu déroulant -->
 
             <!-- description -->
-            <p id="description-article">description</p>
+            <p id="description-article"></p>
 
             <!-- prix -->
-            <h4 id="price-article">prix</h4>
+            <h4 id="price-article"></h4>
 
             <a class="add-cart btn" href="#">Valider le panier</a>
           </div>
