start page panier

--- a/panier.html
+++ b/panier.html
@@ -72,15 +72,15 @@
               <li><strong> Marque :</strong> Zurss 50S</li>
               <li><strong>Lentilles :</strong> 2 choix disponibles</li>
               <li>
-                <strong>Description :</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua.
+                <strong>Description :</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.
               </li>
               <li><strong>Prix :</strong> 1200€</li>
             </ul>
           </div>
         </a>
 
-        <a href="#" class="btn">Valider le panier</a>
+        <a id="btn-validate" href="#" class="btn">Valider le panier</a>
       </main>
 
       <footer>
@@ -91,6 +91,6 @@
       </footer>
     </div>
 
-    <script src="main.js"></script>
+    <script src="panier.js"></script>
   </body>
 </html>
