--- a/panier.html
+++ b/panier.html
@@ -110,7 +110,7 @@
           <!--<input id="btn-validate" type="submit" value="Valider" />-->
         </form>
 
-        <a id="btn-validate" href="#" class="btn">Valider le panier</a>
+        <input id="btn-validate" class="btn" type="submit" value="Valider le panier" />
       </main>
 
       <footer>
