add actions to error

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div id="listProducts"></div>
 
         <!--
-        <a class="block-article" href="produit.html">
+        <a class="block-article" href="produits.html">
           <div>
             <img class="block-article__img" src="images/vcam_1-small.jpg" alt="Appareil photo Zurss 50S" />
           </div>
