--- a/panier.html
+++ b/panier.html
@@ -70,47 +70,43 @@
         <!-- formulaire -->
         <form>
           <h2>Formulaire d'inscription</h2>
-          <!-- nom -->
-          <p>
-            <label for="surname">Nom</label> :
-            <input type="text" name="surname" id="surname" required />
-            <span id="help-surname"></span>
-          </p>
+
           <!-- prenom -->
           <p>
             <label for="name">Prénom</label> :
             <input type="text" name="name" id="name" required />
-            <span id="help-name"></span>
+            <span id="help-name" class="help"></span>
+          </p>
+
+          <!-- nom -->
+          <p>
+            <label for="surname">Nom</label> :
+            <input type="text" name="surname" id="surname" required />
+            <span id="help-surname" class="help"></span>
           </p>
 
           <!-- adresse -->
           <p>
             <label for="address">Adresse</label> :
             <input type="text" name="address" id="address" required />
-            <span id="help-address"></span>
+            <span id="help-address" class="help"></span>
           </p>
           <!-- ville -->
           <p>
             <label for="city">Ville</label> :
             <input type="text" name="city" id="city" required />
-            <span id="help-city"></span>
+            <span id="help-city" class="help"></span>
           </p>
           <!-- email -->
           <p>
             <label for="email">Courriel</label> :
             <input type="email" name="email" id="email" required placeholder="utilisateur@domaine.fr" />
-            <span id="help-email"></span>
+            <span id="help-email" class="help"></span>
           </p>
         </form>
 
         <!-- onclick="window.location sert pour envoyer, à la validation de la commande, sur la page order-conrfimation -->
-        <input
-          id="btn-validate"
-          class="btn"
-          type="submit"
-          onclick="window.location = 'order-confirmation.html'"
-          value="Valider le panier"
-        />
+        <input id="btn-validate" class="btn" type="submit" value="Valider le panier" />
       </main>
 
       <footer>
