alert for add products - correction form

--- a/panier.html
+++ b/panier.html
@@ -69,7 +69,7 @@
 
         <!-- formulaire -->
         <form>
-          <h2>Formulaire d'inscription</h2>
+          <h2>Coordonnées utilisateur</h2>
 
           <!-- prenom -->
           <p>
