--- a/panier.html
+++ b/panier.html
@@ -1,122 +1,123 @@
 <!DOCTYPE html>
 <html lang="fr-fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
 
-    <!--favicon-->
-    <link rel="apple-touch-icon" sizes="57x57" href="./icons/favicon/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="./icons/favicon/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="./icons/favicon/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./icons/favicon/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="./icons/favicon/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="./icons/favicon/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="./icons/favicon/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="./icons/favicon/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./icons/favicon/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="./icons/favicon/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="./icons/favicon/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="./icons/favicon/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="./icons/favicon/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
-    <!--end favicon-->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
-    <!--google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Pacifico&display=swap" rel="stylesheet" />
-    <!--end google fonts-->
+  <!--favicon-->
+  <link rel="apple-touch-icon" sizes="57x57" href="./icons/favicon/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="./icons/favicon/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="./icons/favicon/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="./icons/favicon/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="./icons/favicon/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="./icons/favicon/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="./icons/favicon/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="./icons/favicon/apple-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./icons/favicon/apple-icon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="./icons/favicon/android-icon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="./icons/favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon/favicon-16x16.png" />
+  <link rel="manifest" href="./icons/favicon/manifest.json" />
+  <meta name="msapplication-TileColor" content="#ffffff" />
+  <meta name="msapplication-TileImage" content="./icons/favicon/ms-icon-144x144.png" />
+  <meta name="theme-color" content="#ffffff" />
+  <!--end favicon-->
 
-    <!--incons-->
-    <script src="https://kit.fontawesome.com/1f2f40a978.js" crossorigin="anonymous"></script>
-    <!--end icons-->
+  <!--google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Pacifico&display=swap" rel="stylesheet" />
+  <!--end google fonts-->
 
-    <title>Votre panier</title>
-    <meta
-      name="description"
-      content="Achat et vente en ligne parmi des des applications thématiques ne vendant qu’un seul groupe de produits.
-      Vos articles à prix compétitifs: Oribook pour les livres ou Oritextil pour les vêtements et bien plus !"
-    />
-  </head>
+  <!--incons-->
+  <script src="https://kit.fontawesome.com/1f2f40a978.js" crossorigin="anonymous"></script>
+  <!--end icons-->
 
-  <body>
-    <div class="container-fluid">
-      <header>
-        <div class="container">
-          <a href="index.html">
-            <img class="logo-180px" src="./images/logo-180px.png" alt="logo-orinoco" />
-          </a>
-          <a href="panier.html">
-            <i class="fas fa-cart-arrow-down cart-animation"></i>
-          </a>
-        </div>
-      </header>
+  <title>Votre panier</title>
+  <meta name="description" content="Achat et vente en ligne parmi des des applications thématiques ne vendant qu’un seul groupe de produits.
+      Vos articles à prix compétitifs: Oribook pour les livres ou Oritextil pour les vêtements et bien plus !" />
+</head>
 
-      <main class="container-main">
-        <div class="block-title">
-          <h1>Voici votre panier</h1>
-          <h2>Pour finaliser la commande, veuillez valider votre panier</h2>
-        </div>
-
-        <!-- liste panier -->
-        <div id="list-cart"></div>
-
-        <!-- total note -->
-        <div id="total"></div>
-
-        <!-- formulaire -->
-        <form>
-          <h2>Coordonnées utilisateur</h2>
-
-          <!-- prenom -->
-          <p>
-            <label for="name">Prénom</label> :
-            <input type="text" name="name" id="name" required />
-            <span id="help-name" class="help"></span>
-          </p>
-
-          <!-- nom -->
-          <p>
-            <label for="surname">Nom</label> :
-            <input type="text" name="surname" id="surname" required />
-            <span id="help-surname" class="help"></span>
-          </p>
-
-          <!-- adresse -->
-          <p>
-            <label for="address">Adresse</label> :
-            <input type="text" name="address" id="address" required />
-            <span id="help-address" class="help"></span>
-          </p>
-          <!-- ville -->
-          <p>
-            <label for="city">Ville</label> :
-            <input type="text" name="city" id="city" required />
-            <span id="help-city" class="help"></span>
-          </p>
-          <!-- email -->
-          <p>
-            <label for="email">Courriel</label> :
-            <input type="email" name="email" id="email" required placeholder="utilisateur@domaine.fr" />
-            <span id="help-email" class="help"></span>
-          </p>
-        </form>
-
-        <!-- onclick="window.location sert pour envoyer, à la validation de la commande, sur la page order-conrfimation -->
-        <input id="btn-validate" class="btn" type="submit" value="Valider le panier" />
-      </main>
-
-      <footer>
+<body>
+  <div class="container-fluid">
+    <header>
+      <div class="container">
         <a href="index.html">
           <img class="logo-180px" src="./images/logo-180px.png" alt="logo-orinoco" />
         </a>
-        <span>© 2020, orinoco.com, Inc. ou ses filiales.</span>
-      </footer>
-    </div>
+        <a href="panier.html">
+          <i class="fas fa-cart-arrow-down cart-animation"></i>
+        </a>
+      </div>
+    </header>
 
-    <script src="panier.js"></script>
-  </body>
+    <main class="container-main">
+      <div class="block-title">
+        <h1>Voici votre panier</h1>
+        <h2>Pour finaliser la commande, veuillez valider votre panier</h2>
+      </div>
+
+      <!-- liste panier -->
+      <div id="list-cart"></div>
+
+      <!-- total note -->
+      <div id="total"></div>
+
+      <!-- formulaire -->
+      <form>
+        <h2>Coordonnées utilisateur</h2>
+
+        <!-- prenom -->
+        <p>
+          <label for="name">Prénom</label> :
+          <input type="text" name="name" id="name" required />
+          <span id="help-name" class="help"></span>
+        </p>
+
+        <!-- nom -->
+        <p>
+          <label for="surname">Nom</label> :
+          <input type="text" name="surname" id="surname" required />
+          <span id="help-surname" class="help"></span>
+        </p>
+
+        <!-- adresse -->
+        <p>
+          <label for="address">Adresse</label> :
+          <input type="text" name="address" id="address" required />
+          <span id="help-address" class="help"></span>
+        </p>
+        <!-- ville -->
+        <p>
+          <label for="city">Ville</label> :
+          <input type="text" name="city" id="city" required />
+          <span id="help-city" class="help"></span>
+        </p>
+        <!-- email -->
+        <p>
+          <label for="email">Courriel</label> :
+          <input type="email" name="email" id="email" required placeholder="utilisateur@domaine.fr" />
+          <span id="help-email" class="help"></span>
+        </p>
+      </form>
+
+      <!-- onclick="window.location sert pour envoyer, à la validation de la commande, sur la page order-conrfimation -->
+      <input id="btn-validate" class="btn" type="submit" value="Valider le panier" />
+    </main>
+
+    <footer>
+      <a href="index.html">
+        <img class="logo-180px" src="./images/logo-180px.png" alt="logo-orinoco" />
+      </a>
+      <span>© 2020, orinoco.com, Inc. ou ses filiales.</span>
+    </footer>
+  </div>
+
+
+  <script src="Ajax.js"></script>
+  <script src="panier.js"></script>
+</body>
+
 </html>
