--- a/produits.html
+++ b/produits.html
@@ -1,113 +1,114 @@
 <!DOCTYPE html>
 <html lang="fr-fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
 
-    <!--favicon-->
-    <link rel="apple-touch-icon" sizes="57x57" href="./icons/favicon/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="./icons/favicon/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="./icons/favicon/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./icons/favicon/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="./icons/favicon/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="./icons/favicon/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="./icons/favicon/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="./icons/favicon/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./icons/favicon/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="./icons/favicon/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="./icons/favicon/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="./icons/favicon/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="./icons/favicon/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
-    <!--end favicon-->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
-    <!--google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Pacifico&display=swap" rel="stylesheet" />
-    <!--end google fonts-->
+  <!--favicon-->
+  <link rel="apple-touch-icon" sizes="57x57" href="./icons/favicon/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="./icons/favicon/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="./icons/favicon/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="./icons/favicon/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="./icons/favicon/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="./icons/favicon/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="./icons/favicon/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="./icons/favicon/apple-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./icons/favicon/apple-icon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="./icons/favicon/android-icon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="./icons/favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon/favicon-16x16.png" />
+  <link rel="manifest" href="./icons/favicon/manifest.json" />
+  <meta name="msapplication-TileColor" content="#ffffff" />
+  <meta name="msapplication-TileImage" content="./icons/favicon/ms-icon-144x144.png" />
+  <meta name="theme-color" content="#ffffff" />
+  <!--end favicon-->
 
-    <!--incons-->
-    <script src="https://kit.fontawesome.com/1f2f40a978.js" crossorigin="anonymous"></script>
-    <!--end icons-->
+  <!--google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Pacifico&display=swap" rel="stylesheet" />
+  <!--end google fonts-->
 
-    <title>Produit choici</title>
-    <meta
-      name="description"
-      content="Achat et vente en ligne parmi des des applications thématiques ne vendant qu’un seul groupe de produits.
-      Vos articles à prix compétitifs: Oribook pour les livres ou Oritextil pour les vêtements et bien plus !"
-    />
-  </head>
+  <!--incons-->
+  <script src="https://kit.fontawesome.com/1f2f40a978.js" crossorigin="anonymous"></script>
+  <!--end icons-->
 
-  <body>
-    <div class="container-fluid">
-      <header>
-        <div class="container">
-          <a href="index.html">
-            <img class="logo-180px" src="./images/logo-180px.png" alt="logo-orinoco" />
-          </a>
-          <a href="panier.html">
-            <i class="fas fa-cart-arrow-down cart-animation"></i>
-            <div id="number-articles"></div>
-          </a>
-        </div>
-      </header>
+  <title>Produit choici</title>
+  <meta name="description" content="Achat et vente en ligne parmi des des applications thématiques ne vendant qu’un seul groupe de produits.
+      Vos articles à prix compétitifs: Oribook pour les livres ou Oritextil pour les vêtements et bien plus !" />
+</head>
 
-      <main class="container-main">
-        <!-- title -->
-        <div class="block-title">
-          <h1>Appareils photo vintage</h1>
-          <h2>Appareils photographiques anciens et rares, dédiés aux collectionneurs passionnés</h2>
-        </div>
-        <!-- end title -->
-
-        <!-- article -->
-
-        <!-- image -->
-        <div class="block-article block-article--content">
-          <div class="img-container">
-            <img id="img-article" class="block-article__img block-article__img--content" alt="Image Appareil photo" />
-          </div>
-          <!-- end image -->
-
-          <div>
-            <!-- titre -->
-            <h3 id="h3-article"></h3>
-            <!-- end titre -->
-
-            <!-- menu déroulant -->
-            <form method="POST" action="">
-              <p>
-                <label for="lentilles">Choisissez la lentille</label><br />
-                <select name="lentilles" id="lentilles"> </select>
-              </p>
-            </form>
-            <!-- end menu déroulant -->
-
-            <!-- description -->
-            <p id="description-article"></p>
-
-            <!-- prix -->
-            <h4 id="price-article"></h4>
-
-            <!-- button -->
-            <a id="btn-add" class="add-cart btn" href="#">Ajouter au panier</a>
-          </div>
-        </div>
-        <!-- end article -->
-      </main>
-
-      <footer>
+<body>
+  <div class="container-fluid">
+    <header>
+      <div class="container">
         <a href="index.html">
           <img class="logo-180px" src="./images/logo-180px.png" alt="logo-orinoco" />
         </a>
-        <span>© 2020, orinoco.com, Inc. ou ses filiales.</span>
-      </footer>
-    </div>
+        <a href="panier.html">
+          <i class="fas fa-cart-arrow-down cart-animation"></i>
+          <div id="number-articles"></div>
+        </a>
+      </div>
+    </header>
 
-    <script src="produits.js"></script>
-  </body>
+    <main class="container-main">
+      <!-- title -->
+      <div class="block-title">
+        <h1>Appareils photo vintage</h1>
+        <h2>Appareils photographiques anciens et rares, dédiés aux collectionneurs passionnés</h2>
+      </div>
+      <!-- end title -->
+
+      <!-- article -->
+
+      <!-- image -->
+      <div class="block-article block-article--content">
+        <div class="img-container">
+          <img id="img-article" class="block-article__img block-article__img--content" alt="Image Appareil photo" />
+        </div>
+        <!-- end image -->
+
+        <div>
+          <!-- titre -->
+          <h3 id="h3-article"></h3>
+          <!-- end titre -->
+
+          <!-- menu déroulant -->
+          <form method="POST" action="">
+            <p>
+              <label for="lentilles">Choisissez la lentille</label><br />
+              <select name="lentilles" id="lentilles"> </select>
+            </p>
+          </form>
+          <!-- end menu déroulant -->
+
+          <!-- description -->
+          <p id="description-article"></p>
+
+          <!-- prix -->
+          <h4 id="price-article"></h4>
+
+          <!-- button -->
+          <a id="btn-add" class="add-cart btn" href="#">Ajouter au panier</a>
+        </div>
+      </div>
+      <!-- end article -->
+    </main>
+
+    <footer>
+      <a href="index.html">
+        <img class="logo-180px" src="./images/logo-180px.png" alt="logo-orinoco" />
+      </a>
+      <span>© 2020, orinoco.com, Inc. ou ses filiales.</span>
+    </footer>
+  </div>
+
+
+  <script src="Ajax.js"></script>
+  <script src="produits.js"></script>
+</body>
+
 </html>
